# claims_processing

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json
api-docs/: analyze images.bru  analyze_images.bru  bruno.json  get form.bru  loss.bru
backend/: app.py  env.example  models.py  pyproject.toml
infra/: README.txt
infra/deployment/cloudfront/: main.tf  outputs.tf  providers.tf
infra/deployment/cloudfront/acm/: main.tf  outputs.tf  providers.tf
infra/deployment/cloudfront/config/: dev.yml
infra/deployment/cloudfront/eks/: main.tf
infra/deployment/ecr/: main.tf  providers.tf
infra/deployment/ecr/config/: dev.yml
infra/deployment/eks/config/: main.tf  outputs.tf  providers.tf
infra/deployment/eks_deployment/: locals.tf  main.tf
infra/deployment/eks_deployment/config/: dev.yml
infra/deployment/r53/: providers.tf
infra/deployment/r53/config/: dev.yml
infra/ecr/: outputs.tf
infra/eks/: .terraform.lock.hcl  providers.tf
infra/eks/config/: dev.yml
infra/eks_deployment/: .terraform.lock.hcl  providers.tf
infra/jupyter_stuff/jupyter/: main.tf  outputs.tf
infra/jupyter_stuff/jupyter/config/: dev.yml
infra/jupyter_stuff/jupyter/scripts/: README.md  uv_kernel_setup.sh
infra/r53/: main.tf  outputs.tf
ui/: jsconfig.json  package-lock.json  package.json
ui/src/: App.jsx  index.css  main.jsx
ui/src/components/: DescribeWithImage.jsx  Transition.jsx
ui/src/lib/: api.js  constants.js  store.js
ui/src/pages/: Describe.jsx  Form.jsx  Home.jsx  Layout.jsx  Results.jsx  Success.jsx  Type.jsx  Upload.jsx
(+6 files in other folders)
