[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-ai[logfire]>=0.0.24",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
    "instructor>=1.7.2",
    "openai>=1.63.0",
    "python-multipart>=0.0.20",
]
